addon: Adds some debug code trying out different functionality

--- a/addon/manifest.json
+++ b/addon/manifest.json
@@ -5,19 +5,22 @@
     }
   },
   "background": {
-      "scripts": ["background.js"]
+    "scripts": ["background.js"]
   },
   "browser_action": {
     "browser_style": true,
-    "default_title": "Tabs, tabs, tabs",
-    "default_popup": "tabs.html"
+    "default_title": "Kaneda Debug",
+    "default_popup": "debug.html"
   },
   "description": "A list of methods you can perform on a tab.",
-  "homepage_url": "https://github.com/mdn/webextensions-examples/tree/master/tabs-tabs-tabs",
+  "homepage_url": "https://github.com/vauhochzett/kaneda",
   "manifest_version": 2,
-  "name": "Tabs, tabs, tabs",
+  "name": "Kaneda",
   "permissions": [
-    "tabs"
+    "tabs",
+    "webRequest",
+    "webRequestBlocking",
+    "<all_urls>"
   ],
   "version": "1.0"
 }
