--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,6 @@
+*.venv
 
+*.swp
 # Created by https://www.gitignore.io/api/linux,python
 # Edit at https://www.gitignore.io/?templates=linux,python
 
