search: Installs dev-packages pylint, mypy, black

--- a/search/Pipfile
+++ b/search/Pipfile
@@ -4,6 +4,9 @@ url = "https://pypi.org/simple"
 verify_ssl = true
 
 [dev-packages]
+black = "*"
+pylint = "*"
+mypy = "*"
 
 [packages]
 python-xlib = "*"
@@ -13,3 +16,6 @@ python-levenshtein = "*"
 
 [requires]
 python_version = "3.6"
+
+[pipenv]
+allow_prereleases = true
